--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,7 +18,7 @@ on:
       - master
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  PROJECT_ID: robotic-parsec-340918
   GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: cmpe172    # TODO: update to cluster name
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
@@ -62,7 +62,7 @@ jobs:
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
       with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
+        cluster_name: cmpe172
         location: ${{ env.GKE_ZONE }}
 
     # Build the Docker image
